--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>JS DOM 5</title>
 
     <!-- Link to our CSS -->
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
@@ -19,6 +19,6 @@
     <div id="paragraph_container" class="container"></div>
 
     <!-- Link to our JS -->
-    <script src="scripts.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
